WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157783
REGRESSION(
r54729
): Line breaking in complex mixed-direction text is inconsistent across page refreshes
https://bugs.webkit.org/show_bug.cgi?id=157783
Summary
REGRESSION(r54729): Line breaking in complex mixed-direction text is inconsis...
Myles C. Maxfield
Reported
2016-05-16 20:34:19 PDT
REGRESSION(
r54729
): Line breaking in complex mixed-direction text is inconsistent across page refreshes
Attachments
WIP
(1.58 KB, patch)
2016-05-16 20:35 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(309.85 KB, patch)
2016-05-16 20:52 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(786.62 KB, application/zip)
2016-05-16 21:37 PDT
,
Build Bot
no flags
Details
Patch
(309.92 KB, patch)
2016-05-16 23:09 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-05-16 20:35:18 PDT
Created
attachment 279090
[details]
WIP
Myles C. Maxfield
Comment 2
2016-05-16 20:52:20 PDT
Created
attachment 279095
[details]
Patch
Myles C. Maxfield
Comment 3
2016-05-16 20:52:46 PDT
<
rdar://problem/22908924
>
Said Abou-Hallawa
Comment 4
2016-05-16 21:05:02 PDT
Comment on
attachment 279095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279095&action=review
Unofficial r=me.
> Source/WebCore/platform/graphics/mac/ComplexTextController.cpp:461 > + b = false;
Can't we just initialize mappedIndices like this: Vector<bool, 64> mappedIndices(m_stringLength, false);
alan
Comment 5
2016-05-16 21:14:15 PDT
Comment on
attachment 279095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279095&action=review
> Source/WebCore/platform/graphics/mac/ComplexTextController.cpp:461 > + for (auto& b : mappedIndices) > + b = false;
Don't we have fill c'tor? like std::vector<bool> mappedIndices(64, false);
Build Bot
Comment 6
2016-05-16 21:37:21 PDT
Comment on
attachment 279095
[details]
Patch
Attachment 279095
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1334444
New failing tests: http/tests/performance/performance-resource-timing-cached-entries.html
Build Bot
Comment 7
2016-05-16 21:37:24 PDT
Created
attachment 279101
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Myles C. Maxfield
Comment 8
2016-05-16 23:09:46 PDT
Created
attachment 279106
[details]
Patch
WebKit Commit Bot
Comment 9
2016-05-17 09:20:35 PDT
Comment on
attachment 279106
[details]
Patch Clearing flags on attachment: 279106 Committed
r201015
: <
http://trac.webkit.org/changeset/201015
>
WebKit Commit Bot
Comment 10
2016-05-17 09:20:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug