REGRESSION(r54729): Line breaking in complex mixed-direction text is inconsistent across page refreshes https://bugs.webkit.org/show_bug.cgi?id=157783 <rdar://problem/22908924>

Reviewed by Zalan Bujtas.

Source/WebCore:

mappedIndices is uninitialized.

Test: fast/text/complex-mixed-direction-line-breaking.html

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::ComplexTextRun::setIsNonMonotonic):

LayoutTests:

* fast/text/complex-mixed-direction-line-breaking-expected.html: Added.
* fast/text/complex-mixed-direction-line-breaking.html: Added.
* fast/text/resources/Gulf-regular.ttf: Added.


Canonical link: https://commits.webkit.org/175920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201015 268f45cc-cd09-0410-ab3c-d52691b4dbfc